<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.pruebaslayouts.MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:layout_margin="10dp"
        android:background="#18ffff">

	<!-- Wrap_content se ajusta a su contenido. Weight 1 ya q es el peso q ocupara cada elemento.
		 Match_parent para que se ajuste a su padre, margin se usa para el margen exterior del elemento hasta
		 el borde y padding desde el borde del elemento hasta el contenido(interior), el background se cojerá de
		 los recursos xml, colores. -->

        <TextView
            android:id="@+id/blue"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@color/blue_ligth900"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:text="@string/blue"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/blue2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@color/blue_ligth500"
            android:gravity="center"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:text="@string/blue2"
            android:textColor="@color/yellow"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/blue3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="5dp"
            android:background="@color/blue_ligth300"
            android:gravity="center"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:text="@string/blue3"
            android:textColor="@color/lime"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/blue4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="5dp"
            android:background="@color/blue_ligth200"
            android:gravity="center"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"         
            android:text="@string/blue4"
            android:textColor="@color/fuchsia"
            android:textSize="15sp" />
        

        <TextView
            android:id="@+id/blue5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="5dp"
            android:background="@color/blue_ligth50"
            android:gravity="center"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:text="@string/blue5"
            android:textColor="@color/black" 
            android:textSize="15sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp" >

        <View
            android:layout_width="fill_parent"
            android:layout_height="10dp"
            android:background="@color/green" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.72"
            android:background="@color/purple"
            android:text="@string/col1"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="10dp"
            android:background="@color/green" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple"
            android:text="@string/col2"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="10dp"
            android:background="@color/green" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple"
            android:text="@string/col3"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="10dp"
            android:background="@color/green" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/col4"
            android:background="@color/purple"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="10dp"
            android:background="@color/green" />
    </LinearLayout>

</LinearLayout>